--- a/2019.html
+++ b/2019.html
@@ -24,31 +24,42 @@
                             <img src="img/logo.png" alt="">
                         </div>
                         <div class="main-menubar d-flex align-items-center">
-                            <nav class="hide">
+                            <nav>
                                 <a href="index.html">主页</a>
                                 <a href="project.html">项目</a>
                                 <a href="About.html">关于</a>
                             </nav>
-                            <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
+                            <div class="menu-bar"></div>
 
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="text" style=" text-align:center;"><h1>sknrio Tech Team 2019年度大展 In 2019.7</h1></div>
+            <div class="text" style=" text-align:center;"><h1>sknrio Tech Team 2019-2020年度大展</h1></div>
             <div class="jumbotron">
                 <h1>
-                    本次将于今年7月举行，尽情期待</h1>
-                    <p class="lead"></p>
-                    <h2>
-                        先行Demo Key:mxtg
-                        <a class="btn btn-default" href="https://pan.baidu.com/s/1wDO3U9Ol1-pvKfnXHyiCwQ"><h3>传送门 &raquo;</h3></a>
-                    </h2>
-                <p>
-                        2018年度大展 ---滑稽展视频
-                    </p>
-                    <iframe id="b" class="b video_pc" src="//player.bilibili.com/player.html?cid=69071579&aid=39305150&page=1" frameborder="0" width="640" height="430" allowfullscreen></iframe>
-</div>
+                    本次将于今年7月举行，尽情期待
+                </h1>
+                <p class="lead"></p>
+                <h2>
+                    2019年度大展视频
+                </h2>
+                <video src="http://coding-net-production-file-1257242599.cos.ap-shanghai.myqcloud.com/39d0cad0-142d-11ea-8c64-1f7e50dec7d1.mp4?sign=q-sign-algorithm%3Dsha1%26q-ak%3DAKIDay83lFmaS6Y4LTdzMVO1SdZOyJSNOYpr%26q-sign-time%3D1575199568%3B1575203168%26q-key-time%3D1575199568%3B1575203168%26q-header-list%3D%26q-url-param-list%3Dresponse-content-disposition%3Bresponse-expires%26q-signature%3D76f592a76670fb18ad5646ffb98c78adc3e5067e&amp;response-content-disposition=attachment%3Bfilename%3DwebVer_STT2019_1.mp4&amp;response-expires=Tue%2C%2003%20Dec%202019%2023%3A26%3A08%20GMT" frameborder="0" width="640" height="430" controls="" preload="auto" allowfullscreen></video>
+
+                <h2>
+                    寄明月MMD
+                </h2>
+                <video src="http://coding-net-production-file-1257242599.cos.ap-shanghai.myqcloud.com/f1180060-142c-11ea-8c64-1f7e50dec7d1.mp4?sign=q-sign-algorithm%3Dsha1%26q-ak%3DAKIDay83lFmaS6Y4LTdzMVO1SdZOyJSNOYpr%26q-sign-time%3D1575199484%3B1575203084%26q-key-time%3D1575199484%3B1575203084%26q-header-list%3D%26q-url-param-list%3Dresponse-content-disposition%3Bresponse-expires%26q-signature%3D7317414a668d6791ed42459bfa9b40004c8ca00f&amp;response-content-disposition=attachment%3Bfilename%3D%E5%AF%84%E6%98%8E%E6%9C%88MMD.mp4&amp;response-expires=Tue%2C%2003%20Dec%202019%2023%3A24%3A44%20GMT" width="640" height="430" controls="" preload="auto"></video>
+                <h2>
+                    触摸天空MMD
+                </h2>
+                <iframe id="b" class="b video_pc" src="//player.bilibili.com/player.html?cid=105527741&aid=60629291&page=1" frameborder="0" width="640" height="430" allowfullscreen></iframe>
+
+                <h2>
+                    2018年度大展 ---滑稽展视频
+                </h2>
+                <iframe id="b" class="b video_pc" src="//player.bilibili.com/player.html?cid=69071579&aid=39305150&page=1" frameborder="0" width="640" height="430" allowfullscreen></iframe>
+            </div>
         </header>
     </div>
     <footer>
@@ -57,7 +68,7 @@
                 <div class="logo">
                     <a href="index.html"><img src="img/f-logo.png" alt=""></a>
                 </div>
-                <div class="copy-right-text">sknrio tech team &copy; 2019  |  All rights reserved. This template is made with </div>
+                <div class="copy-right-text">sknrio tech team &copy; 2020  |  All rights reserved. This template is made with </div>
                 <div class="footer-social">
                 </div>
             </div>
