--- a/project.html
+++ b/project.html
@@ -22,12 +22,12 @@
                             <img src="img/logo.png" alt="">
                         </div>
                         <div class="main-menubar d-flex align-items-center">
-                            <nav class="hide">
+                            <nav>
                                 <a href="index.html">主页</a>
                                 <a href="project.html">项目</a>
                                 <a href="About.html">关于</a>
                             </nav>
-                            <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
+                            <div class="menu-bar"></div>
                         </div>
                     </div>
                 </div>
@@ -41,6 +41,13 @@
                 </p>
             </div>
         </header>
+        <div class="jumbotron">
+            <h1>和风幻想乡1.12.2高版本mod整合包</h1>
+            <p class="lead">中国风，和风，食物类mod整合包---和风幻想乡1.0版本更新</p>
+            <p>
+                <a class="btn btn-primary btn-lg" href="projectalice.html">了解详情 &raquo;</a>
+            </p>
+        </div>
         <div class="jumbotron">
             <h2>STT工业多mod生存1.7.10&1.12.2整合</h2>
             <p class="lead"></p>
@@ -60,7 +67,7 @@
         <div class="jumbotron">
             <h2>Project LA</h2>
             <p class="lead">高性能Minecraft服务器</p>
-            <p><a href="Project LA.html" class="btn btn-primary btn-lg">了解详情 &raquo;</a></p>
+            <p><a href="Project_LA.html" class="btn btn-primary btn-lg">了解详情 &raquo;</a></p>
         </div>
 
         <div class="jumbotron">
@@ -89,7 +96,7 @@
                 <div class="logo">
                     <a href="index.html"><img src="img/f-logo.png" alt=""></a>
                 </div>
-                <div class="copy-right-text">sknrio tech team &copy; 2019  |  All rights reserved. </div>
+                <div class="copy-right-text">sknrio tech team &copy; 2020  |  All rights reserved. </div>
                 <div class="footer-social">
                 </div>
             </div>
