--- a/project_panman.html
+++ b/project_panman.html
@@ -24,22 +24,22 @@
                             <img src="img/logo.png" alt="">
                         </div>
                         <div class="main-menubar d-flex align-items-center">
-                            <nav class="hide">
+                            <nav>
                                 <a href="index.html">主页</a>
                                 <a href="project.html">项目</a>
                                 <a href="About.html">关于</a>
                             </nav>
-                            <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
+                            <div class="menu-bar"></div>
 
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="text" style=" text-align:center;"><h1>The Project A.L.I.C.E</h1></div>
+            <div class="text" style=" text-align:center;"><h1>吃豆人</h1></div>
             <div class="jumbotron">
                 <h1>吃豆人</h1>
                 <p>
-                    <a class="btn btn-default" href="https://pan.baidu.com/s/1XHxm23IYparNC4W6H_G-xA">下载 &raquo;</a>
+                    <a class="btn btn-default" href=".\files\吃豆人.exe">下载 &raquo;</a>
                 </p>
             </div>
         </header>
@@ -50,7 +50,7 @@
                 <div class="logo">
                     <a href="index.html"><img src="img/f-logo.png" alt=""></a>
                 </div>
-                <div class="copy-right-text">sknrio tech team &copy; 2019  |  All rights reserved. This template is made with </div>
+                <div class="copy-right-text">sknrio tech team &copy; 2020  |  All rights reserved. This template is made with </div>
                 <div class="footer-social">
                 </div>
             </div>
