--- a/FSN_FZ_BGM.html
+++ b/FSN_FZ_BGM.html
@@ -24,12 +24,12 @@
                             <img src="img/logo.png" alt="">
                         </div>
                         <div class="main-menubar d-flex align-items-center">
-                            <nav class="hide">
+                            <nav >
                                 <a href="index.html">主页</a>
                                 <a href="project.html">项目</a>
                                 <a href="About.html">关于</a>
                             </nav>
-                            <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
+                            <div class="menu-bar"></div>
 
                         </div>
                     </div>
@@ -39,18 +39,22 @@
                 <h2>Fate Zero BGM&Fate stay night BGM</h2>
                 <p class="lead">Fate stay night BGM完整版 MCPE Ver1.0-1.1</p>
                 <p>
+                    <a class="btn btn-default" href="https://sknirotechteam.coding.net/s/ed4f07ed-a657-43dd-ad2d-a13c60561f51">下载 &raquo;</a>
                     <a class="btn btn-default" href="https://pan.baidu.com/s/1hAfMerK0eYOZx1kUwVNHJQ">下载 &raquo;</a>
                 </p>
                 <p class="lead">Fate stay night BGM精简版 MCPE Ver1.0-1.1</p>
                 <p>
+                    <a class="btn btn-default" href="https://sknirotechteam.coding.net/s/1754d89a-05b2-49cc-a7e3-bc787a44ce76">下载 &raquo;</a>
                     <a class="btn btn-default" href="https://pan.baidu.com/s/1hAfMerK0eYOZx1kUwVNHJQ">下载 &raquo;</a>
                 </p>
                 <p class="lead">Fate Zero BGM完整版 MCPE Ver1.0-1.1</p>
                 <p>
+                    <a class="btn btn-default" href="https://sknirotechteam.coding.net/s/ebf72d38-486e-48cd-89ec-6b4f6e35d551">下载 &raquo;</a>
                     <a class="btn btn-default" href="https://pan.baidu.com/s/1hAfMerK0eYOZx1kUwVNHJQ">下载 &raquo;</a>
                 </p>
                 <p class="lead">Fate Zero BGM精简版 MCPE Ver1.0-1.1</p>
                 <p>
+                    <a class="btn btn-default" href="https://sknirotechteam.coding.net/s/e68c2739-0ac8-4113-a367-4b3fb792f220">下载 &raquo;</a>
                     <a class="btn btn-default" href="https://pan.baidu.com/s/1hAfMerK0eYOZx1kUwVNHJQ">下载 &raquo;</a>
                 </p>
             </div>
@@ -62,14 +66,13 @@
                 <div class="logo">
                     <a href="index.html"><img src="img/f-logo.png" alt=""></a>
                 </div>
-                <div class="copy-right-text">sknrio tech team &copy; 2019  |  All rights reserved. This template is made with </div>
+                <div class="copy-right-text">sknrio tech team &copy; 2020  |  All rights reserved.  </div>
                 <div class="footer-social">
                 </div>
             </div>
         </div>
     </footer>
     <!-- End Footer Widget Area -->
-    </div>
     <script src="js/vendor/jquery-2.2.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
