--- a/SAOT_SAOBGM.html
+++ b/SAOT_SAOBGM.html
@@ -24,12 +24,12 @@
                             <img src="img/logo.png" alt="">
                         </div>
                         <div class="main-menubar d-flex align-items-center">
-                            <nav class="hide">
+                            <nav>
                                 <a href="index.html">主页</a>
                                 <a href="project.html">项目</a>
                                 <a href="About.html">关于</a>
                             </nav>
-                            <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
+                            <div class="menu-bar"></div>
 
                         </div>
                     </div>
@@ -38,67 +38,71 @@
             <div class="jumbotron">
                 <h2>刀剑神域材质&刀剑神域序列之争bgm</h2>
                 <h2>最新正式版</h2>
-                <p class="lead">刀剑神域材质4.1.1 mcpack版 MCBE Ver 1.2-1.8.0</p>
+                <p class="lead">刀剑神域材质4.1.1 mcpack版 MCBE Ver 1.2-1.13.3</p>
                 <p>
-                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://sknirotechteam.coding.net/s/b3555cf2-3913-4de2-a5d2-0602ff16be61">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">百度网盘下载 &raquo;</a>                    
                 </p>
-                <p class="lead">刀剑神域材质4.1.1 MCBE Ver 1.2-1.8.0</p>
+                <p class="lead">刀剑神域材质4.1.1 MCBE Ver 1.2-1.13.3</p>
                 <p>
-                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://sknirotechteam.coding.net/s/5c2422cb-aa20-4e47-a4d4-b060dfbb72ce">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">百度网盘下载 &raquo;</a>
                 </p>
                 <p class="lead">刀剑神域材质64xforAsuna2.0.0 MCPE Ver 1.1</p>
                 <p>
-                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://sknirotechteam.coding.net/s/c02dabe3-44ab-44bc-bbfc-0eaf2d741ff2">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">百度网盘下载 &raquo;</a>
                 </p>
                 <p class="lead">刀剑神域序列之争bgm0.1 MCPE Ver 1.0 1.1</p>
                 <p>
-                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">百度网盘下载 &raquo;</a>
                 </p>
                 <p class="lead">刀剑神域序列之争bgm3.0 MCPE Ver 1.1</p>
                 <p>
-                    <h2>历史版本</h2>
-                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://sknirotechteam.coding.net/s/be356723-49a7-46b7-b311-d1716dc58134">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">百度网盘下载 &raquo;</a>
                 </p>
+                <h2>历史版本</h2>
                 <p class="lead">刀剑神域材质4.1.0 mcpack版 MCBE Ver 1.2-1.8.0</p>
-
+                <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">百度网盘下载 &raquo;</a>
                 <p>
-                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">百度网盘下载 &raquo;</a>
                 </p>
                 <p class="lead">刀剑神域材质4.1.0 MCBE Ver 1.2-1.8.0</p>
                 <p>
-                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">百度网盘下载 &raquo;</a>
                 </p>
                 <p class="lead">刀剑神域材质4.0.0 mcpack版 MCBE Ver 1.2-1.8.0</p>
                 <p>
-                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">百度网盘下载 &raquo;</a>
                 </p>
                 <p class="lead">刀剑神域材质v3.2.0 MCPE Ver 1.1</p>
                 <p>
-                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">百度网盘下载 &raquo;</a>
                 </p>
                 <p class="lead">刀剑神域材质v3.1.0 MCPE Ver 1.1</p>
                 <p>
-                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">百度网盘下载 &raquo;</a>
                 </p>
                 <p class="lead">刀剑神域材质v3.0.0 MCPE Ver 1.1</p>
                 <p>
-                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">百度网盘下载 &raquo;</a>
                 </p>
                 <p class="lead">刀剑神域材质v2.2.1 MCPE Ver 1.1</p>
                 <p>
-                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">百度网盘下载 &raquo;</a>
                 </p>
                 <p class="lead">刀剑神域序列之争bgm1.0.1 MCPE Ver 1.0 1.1</p>
                 <p>
-                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">百度网盘下载 &raquo;</a>
                 </p>
                 <p class="lead">刀剑神域序列之争bgm2.1高配版 MCPE Ver 1.1</p>
                 <p>
-                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">百度网盘下载 &raquo;</a>
                 </p>
                 <p class="lead">刀剑神域序列之争bgm2.1中音质版 MCPE Ver 1.1</p>
                 <p>
-                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://pan.baidu.com/s/14REVX-WWTzWNQ29JhbiBtw">百度网盘下载 &raquo;</a>
                 </p>
             </div>
         </header>
@@ -109,7 +113,7 @@
                 <div class="logo">
                     <a href="index.html"><img src="img/f-logo.png" alt=""></a>
                 </div>
-                <div class="copy-right-text">sknrio tech team &copy; 2019  |  All rights reserved. This template is made with </div>
+                <div class="copy-right-text">sknrio tech team &copy; 2020  |  All rights reserved.  </div>
                 <div class="footer-social">
                 </div>
             </div>
