--- a/Windows10.html
+++ b/Windows10.html
@@ -24,12 +24,12 @@
                             <img src="img/logo.png" alt="">
                         </div>
                         <div class="main-menubar d-flex align-items-center">
-                            <nav class="hide">
+                            <nav>
                                 <a href="index.html">主页</a>
                                 <a href="project.html">项目</a>
                                 <a href="About.html">关于</a>
                             </nav>
-                            <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
+                            <div class="menu-bar"></div>
 
                         </div>
                     </div>
@@ -51,7 +51,7 @@
                 <div class="logo">
                     <a href="index.html"><img src="img/f-logo.png" alt=""></a>
                 </div>
-                <div class="copy-right-text">sknrio tech team &copy; 2019  |  All rights reserved. This template is made with </div>
+                <div class="copy-right-text">sknrio tech team &copy; 2020  |  All rights reserved. This template is made with </div>
                 <div class="footer-social">
                 </div>
             </div>
