--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                             <a href="index.html"><img src="img/logo.png" alt=""></a>
                         </div>
                         <div class="main-menubar d-flex align-items-center">
-                            <nav class="hide">
+                            <nav >
                                 <a href="index.html">主页</a>
                                 <a href="project.html">项目</a>
                                 <a href="About.html">关于</a>
                             </nav>
-                            <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
+                            <div class="menu-bar"></div>
                         </div>
                     </div>
                 </div>
@@ -149,7 +149,7 @@
                     <div class="logo">
                         <a href="index.html"><img src="img/f-logo.png" alt=""></a>
                     </div>
-                    <div class="copy-right-text">sknrio tech team &copy; 2019  |  All rights reserved. </div>
+                    <div class="copy-right-text">sknrio tech team &copy; 2020  |  All rights reserved. </div>
                     <div class="footer-social">
                     </div>
                 </div>
