--- a/project_SAO_BW.html
+++ b/project_SAO_BW.html
@@ -24,12 +24,12 @@
                             <img src="img/logo.png" alt="">
                         </div>
                         <div class="main-menubar d-flex align-items-center">
-                            <nav class="hide">
+                            <nav>
                                 <a href="index.html">主页</a>
                                 <a href="project.html">项目</a>
                                 <a href="About.html">关于</a>
                             </nav>
-                            <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
+                            <div class="menu-bar"></div>
 
                         </div>
                     </div>
@@ -38,7 +38,8 @@
             <div class="jumbotron">
                 <h1>黑白剑的共舞1.0.0</h1>
                 <p>
-                    <a class="btn btn-default" href="https://pan.baidu.com/s/1z14JOdxMZG9wNZTdZlKvJQ">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://sknirotechteam.coding.net/s/49365607-f32f-485c-957d-18bf8683e8f5">下载 &raquo;</a>                   
+                    <a class="btn btn-default" href="https://pan.baidu.com/s/1z14JOdxMZG9wNZTdZlKvJQ">百度网盘下载 &raquo;</a>
                 </p>
                 <h2> !!!视距要开14及以上!!!</h2>
                 <h2>东西由几个物品刷新点刷出，所以没有初始装备</h2>
@@ -52,7 +53,7 @@
                 <div class="logo">
                     <a href="index.html"><img src="img/f-logo.png" alt=""></a>
                 </div>
-                <div class="copy-right-text">sknrio tech team &copy; 2019  |  All rights reserved. This template is made with </div>
+                <div class="copy-right-text">sknrio tech team &copy; 2020  |  All rights reserved.  </div>
                 <div class="footer-social">
                 </div>
             </div>
