--- a/stt_ic2_index.html
+++ b/stt_ic2_index.html
@@ -76,6 +76,15 @@ jQuery(document).ready(function(){
                 <h2><img data-translate="News_Title_Img" src="./files/d3d3LmJha2F4bC5jb20LwL2Fzc2V0cy92.jpg" height="36" width="108" /></h2>
                 <ul>
                     <li class="alphaBtn" style="opacity: 1;">
+                        <a data-translate="News_3_Link" target="_blank" href="">
+                            <p class="image"><img data-translate="News3_Img" src="./files/3.jpg" height="126" width="190" /></p>
+                            <p class="title seasonColor" data-translate="News_3_Title">1.12.2—2.1.1339 Build-5037 发布</p>
+                            <p class="date" data-translate="News_3_Date">日期 : 2018-12-1</p>
+                            <div class="txt" data-translate="News_3_Desc"></div>
+                            1.12.2版本更新1.12.2—2.1.1339 Build-5037
+                        </a>
+                    </li>
+                    <li class="alphaBtn" style="opacity: 1;">
                         <a data-translate="News_1_Link" href="javascript:void(0)" target="_blank">
                             <p class="image"><img data-translate="News1_Img" src="./files/1.jpg" height="126" width="190" /></p>
                             <p class="title seasonColor" data-translate="News_1_Title">1.12.2-2.0.920 Build-4123 发布</p>
@@ -95,16 +104,7 @@ jQuery(document).ready(function(){
                             1.12.2第一个正式版
                         </a>
                     </li>
-                    <li class="alphaBtn" style="opacity: 1;">
-                        <a data-translate="News_3_Link" target="_blank" href="">
-                            <p class="image"><img data-translate="News3_Img" src="./files/3.jpg" height="126" width="190" /></p>
-                            <p class="title seasonColor" data-translate="News_3_Title">2.4X.4 [Build-2401] 发布</p>
-                            <p class="date" data-translate="News_3_Date">日期 : 2018-7-16</p>
-                            <div class="txt" data-translate="News_3_Desc"></div>
-                            1.7.10版本添加MB_Battlegear2-Bullseye-1.0.8.3 mod
-                            删除虚无世界2
-                        </a>
-                    </li>
+
                 </ul>
             </div>
             <div class="box sizeM" id="Airme_Video_225" style="display: block; opacity: 1; position: absolute; left: 1000px; top: 26px; transform: matrix(1, 0, 0, 1, 0, 0);">
@@ -133,7 +133,7 @@ jQuery(document).ready(function(){
             </ul>
         </div>
         <div class="">
-            skniro tech team 2016-2019 <br />
+            skniro tech team 2016-2020 <br />
             Web &amp; CSS Disign  By: Edwiin  By: 幻彩领域 夏了个沫 <br />
         </div>
         <p class="btnPagetop alphaBtn" style="opacity: 1;"><img src="./files/saved_resource" alt="PAGE TOP" height="55" width="55" /></p>
