--- a/project.html
+++ b/project.html
@@ -45,7 +45,7 @@
             <h1>和风幻想乡1.12.2高版本mod整合包</h1>
             <p class="lead">中国风，和风，食物类mod整合包---和风幻想乡1.0版本更新</p>
             <p>
-                <a class="btn btn-primary btn-lg" href="projectalice.html">了解详情 &raquo;</a>
+                <a class="btn btn-primary btn-lg" href="和风幻想乡.html">了解详情 &raquo;</a>
             </p>
         </div>
         <div class="jumbotron">
