--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
     <title>skniro tech team</title>
+    <meta name="keywords" content="STG skniro tech group">
+    <meta name="description" content="Project A.L.I.C.E.&和风幻想乡更新">
 </head>
 <body>
     <div class="main-wrapper-first">
