--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>skniro tech team</title>
     <meta name="keywords" content="STG skniro tech group">
     <meta name="description" content="Project A.L.I.C.E.&和风幻想乡更新">
+    <meta name="msvalidate.01" content="2D0149BE210F5F997EF8A4DEBE91BAC0" />
 </head>
 <body>
     <div class="main-wrapper-first">
