--- a/2019.html
+++ b/2019.html
@@ -44,21 +44,19 @@
                 <h2>
                     2019年度大展视频
                 </h2>
-                <video src="http://coding-net-production-file-1257242599.cos.ap-shanghai.myqcloud.com/39d0cad0-142d-11ea-8c64-1f7e50dec7d1.mp4?sign=q-sign-algorithm%3Dsha1%26q-ak%3DAKIDay83lFmaS6Y4LTdzMVO1SdZOyJSNOYpr%26q-sign-time%3D1575199568%3B1575203168%26q-key-time%3D1575199568%3B1575203168%26q-header-list%3D%26q-url-param-list%3Dresponse-content-disposition%3Bresponse-expires%26q-signature%3D76f592a76670fb18ad5646ffb98c78adc3e5067e&amp;response-content-disposition=attachment%3Bfilename%3DwebVer_STT2019_1.mp4&amp;response-expires=Tue%2C%2003%20Dec%202019%2023%3A26%3A08%20GMT" frameborder="0" width="640" height="430" controls="" preload="auto" allowfullscreen></video>
+                <h2>
+                    特效部：【航空剪辑】We can fly freely！我们可以自由飞翔
+                </h2>
+                <iframe id="b" class="b video_pc" src="//player.bilibili.com/player.html?cid=139214045&aid=81344547&page=1" frameborder="0" width="640" height="430" allowfullscreen></iframe>
+                    <h2>
+                        动画部：触摸天空MMD
+                    </h2>
+                    <iframe id="b" class="b video_pc" src="//player.bilibili.com/player.html?cid=119001955&aid=68666853&page=1" frameborder="0" width="640" height="430" allowfullscreen></iframe>
 
-                <h2>
-                    寄明月MMD
-                </h2>
-                <video src="http://coding-net-production-file-1257242599.cos.ap-shanghai.myqcloud.com/f1180060-142c-11ea-8c64-1f7e50dec7d1.mp4?sign=q-sign-algorithm%3Dsha1%26q-ak%3DAKIDay83lFmaS6Y4LTdzMVO1SdZOyJSNOYpr%26q-sign-time%3D1575199484%3B1575203084%26q-key-time%3D1575199484%3B1575203084%26q-header-list%3D%26q-url-param-list%3Dresponse-content-disposition%3Bresponse-expires%26q-signature%3D7317414a668d6791ed42459bfa9b40004c8ca00f&amp;response-content-disposition=attachment%3Bfilename%3D%E5%AF%84%E6%98%8E%E6%9C%88MMD.mp4&amp;response-expires=Tue%2C%2003%20Dec%202019%2023%3A24%3A44%20GMT" width="640" height="430" controls="" preload="auto"></video>
-                <h2>
-                    触摸天空MMD
-                </h2>
-                <iframe id="b" class="b video_pc" src="//player.bilibili.com/player.html?cid=105527741&aid=60629291&page=1" frameborder="0" width="640" height="430" allowfullscreen></iframe>
-
-                <h2>
-                    2018年度大展 ---滑稽展视频
-                </h2>
-                <iframe id="b" class="b video_pc" src="//player.bilibili.com/player.html?cid=69071579&aid=39305150&page=1" frameborder="0" width="640" height="430" allowfullscreen></iframe>
+                    <h2>
+                        上期回顾：2018年度大展 ---滑稽展视频
+                    </h2>
+                    <iframe id="b" class="b video_pc" src="//player.bilibili.com/player.html?cid=69071579&aid=39305150&page=1" frameborder="0" width="640" height="430" allowfullscreen></iframe>
             </div>
         </header>
     </div>
