--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <title>skniro tech team</title>
     <meta name="keywords" content="STG skniro tech group">
     <meta name="description" content="Project A.L.I.C.E.&和风幻想乡更新">
-    <meta name="msvalidate.01" content="2D0149BE210F5F997EF8A4DEBE91BAC0" />
 </head>
 <body>
     <div class="main-wrapper-first">
@@ -26,9 +25,10 @@
                             <a href="index.html"><img src="img/logo.png" alt=""></a>
                         </div>
                         <div class="main-menubar d-flex align-items-center">
-                            <nav >
+                            <nav>
                                 <a href="index.html">主页</a>
                                 <a href="project.html">项目</a>
+                                <a href="/project/index.html">技术文档</a>
                                 <a href="About.html">关于</a>
                             </nav>
                             <div class="menu-bar"></div>
