--- a/projectalice.html
+++ b/projectalice.html
@@ -41,6 +41,7 @@
                 <p class="lead">bate0.0.5 Windows develop Ver</p>
                 <p>
                     <a class="btn btn-default" href="https://pan.baidu.com/s/1DyWmgWqgUnMpedt2yB4SwA">下载 &raquo;</a>
+                    <a class="btn btn-default" href="https://k0txda.coding-pages.com/Game.html">下载 &raquo;</a>
                 </p>
                 <iframe id="b" class="b video_pc" src="//player.bilibili.com/player.html?cid=70431113&aid=40102302&page=1" frameborder="0" width="640" height="430" allowfullscreen></iframe>
             </div>
