--- a/About.html
+++ b/About.html
@@ -38,9 +38,10 @@
 
         <div class="container">
             <div class="col-md-4">
-                <h1 class="title text-uppercase">Email Address</h1>
+                <h1>联系方式</h1>
                 <div class="contact">
-                    <h4>colamjc@gamil.com</h4> <br>
+                    <h4>邮箱：colamjc@gamil.com</h4> <br>
+                    <h4>QQ群：724554769</h4> <br>
                 </div>
             </div>
         </div>
