--- a/2019.html
+++ b/2019.html
@@ -27,6 +27,7 @@
                             <nav>
                                 <a href="index.html">主页</a>
                                 <a href="project.html">项目</a>
+                                <a href="/project/index.html">技术文档</a>
                                 <a href="About.html">关于</a>
                             </nav>
                             <div class="menu-bar"></div>
