--- a/FSN_FZ_BGM.html
+++ b/FSN_FZ_BGM.html
@@ -24,9 +24,10 @@
                             <img src="img/logo.png" alt="">
                         </div>
                         <div class="main-menubar d-flex align-items-center">
-                            <nav >
+                            <nav>
                                 <a href="index.html">主页</a>
                                 <a href="project.html">项目</a>
+                                <a href="/project/index.html">技术文档</a>
                                 <a href="About.html">关于</a>
                             </nav>
                             <div class="menu-bar"></div>
