--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
                 <div class="row align-items-center">
                     <div class="col-lg-3">
                         <div class="story-title">
-                            <h3 class="text-white">sknrio Tech Team 2019年度大展</h3>
+                            <h3 class="text-white">sknrio Tech Team 2019年度大展 新年快乐</h3>
                             <span class="text-uppercase text-white">STT New Games</span>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="story-box">
                             <h6 class="text-uppercase">了解更多</h6>
-                            <p>In 2019.7</p>
+                            <p>In 2019.12-2020.1 Happy New Year</p>
                             <a href="2019.html" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">详细信息</span></a>
                         </div>
 
