--- a/project/ProjectA.L.I.C.E.html
+++ b/project/ProjectA.L.I.C.E.html
@@ -70,16 +70,10 @@
                             <div class="jumbotron">
                                 <h1></h1>
                                 <p class="lead"> Welcome sknrio Tech Team Project Web</p>
-                                <p class="lead">Project A.L.I.C.E 项目企划</p>
-                                <p><a href="/project/ProjectA.L.I.C.E.html" class="btn btn-primary btn-lg">了解详情 &raquo;</a></p>
-                                <p class="lead">项目维护周期</p>
-                                <p><a href="/project/projectday.html" class="btn btn-primary btn-lg">了解详情 &raquo;</a></p>
-                                <p class="lead">Project LA 项目企划</p>
-                                <p><a href="/project/ProjectLA.html" class="btn btn-primary btn-lg">了解详情 &raquo;</a></p>
-                                <p class="lead">Project A.L.I.C.E 项目企划</p>
-                                <p><a href="/project/ProjectA.L.I.C.E.html" class="btn btn-primary btn-lg">了解详情 &raquo;</a></p>
-                                <p class="lead">Project A.L.I.C.E 项目企划</p>
-                                <p><a href="/project/ProjectA.L.I.C.E.html" class="btn btn-primary btn-lg">了解详情 &raquo;</a></p>
+                                <p class="lead">Project A.L.I.C.E </p>
+                                <p>Vtuber部分（虚拟主播)</p>
+                                    <img><iframe src="img/STG_Project ALVTUP.pdf" width="100%" height="80%"></iframe>
+                                <p>/p>
                             </div>
                         </div>
                     </div>                                                   
