--- a/project/ProjectLA.html
+++ b/project/ProjectLA.html
@@ -67,19 +67,12 @@
                 </div>
                 <div class="container">
                         <div class="row align-items-center">
-                            <div class="jumbotron">
-                                <h1></h1>
-                                <p class="lead"> Welcome sknrio Tech Team Project Web</p>
-                                <p class="lead">Project A.L.I.C.E 项目企划</p>
-                                <p><a href="/project/ProjectA.L.I.C.E.html" class="btn btn-primary btn-lg">了解详情 &raquo;</a></p>
-                                <p class="lead">项目维护周期</p>
-                                <p><a href="/project/projectday.html" class="btn btn-primary btn-lg">了解详情 &raquo;</a></p>
-                                <p class="lead">Project LA 项目企划</p>
-                                <p><a href="/project/ProjectLA.html" class="btn btn-primary btn-lg">了解详情 &raquo;</a></p>
-                                <p class="lead">Project A.L.I.C.E 项目企划</p>
-                                <p><a href="/project/ProjectA.L.I.C.E.html" class="btn btn-primary btn-lg">了解详情 &raquo;</a></p>
-                                <p class="lead">Project A.L.I.C.E 项目企划</p>
-                                <p><a href="/project/ProjectA.L.I.C.E.html" class="btn btn-primary btn-lg">了解详情 &raquo;</a></p>
+                            <div class="jumbotron" >
+                                <h1>Project LA企划</h1>
+                                <p class="lead">Project A.L.I.C.E </p>
+                                <img src='/project/img/ProjectLA1.jpg' width="640" height="430" alt='image'>
+                                <img src='/project/img/ProjectLA2.JPG' width="640" height="430" alt='image'>
+                                <img src='/project/img/ProjectLA3.JPG' width="640" height="430" alt='image'>
                             </div>
                         </div>
                     </div>                                                   
