--- a/project/ProjectA.L.I.C.E.html
+++ b/project/ProjectA.L.I.C.E.html
@@ -68,12 +68,26 @@
                 <div class="container">
                         <div class="row align-items-center">
                             <div class="jumbotron">
-                                <h1></h1>
-                                <p class="lead"> Welcome sknrio Tech Team Project Web</p>
-                                <p class="lead">Project A.L.I.C.E </p>
+                                <h1>Project A.L.I.C.E</h1>
+                                <p></p>
+                                <p class="lead"> </p>
+                                <p>Project A.L.I.C.E</p>
+                                <img><iframe src="img/Project A.L.I.C.E项目企划web1.pdf" width="100%" height="1200"></iframe>
+                                <p>游戏部分</p>
+                                <img><iframe src="img/Project A.L.I.C.E项目企划web2.pdf" width="100%" height="1200"></iframe>
+                                <p>宣传视频</p>
+                                <iframe id="b" class="b video_pc" src="//player.bilibili.com/player.html?cid=70431113&aid=40102302&page=1" frameborder="0" width="640" height="430" allowfullscreen></iframe>
+                                <p>开发软件官方网站</p>
+                                <a class="btn btn-primary btn-lg" href="http://visualnovelmaker.com/">访问 &raquo;</a>
+                                <p>官方文档(英文)</p>
+                                <a class="btn btn-primary btn-lg" href="/help/index.htm">访问 &raquo;</a>
+                                <p>官方文档(日文)</p>
+                                <a class="btn btn-primary btn-lg" href="/help_jp/index.htm">访问 &raquo;</a>
                                 <p>Vtuber部分（虚拟主播)</p>
-                                    <img><iframe src="img/STG_Project ALVTUP.pdf" width="100%" height="80%"></iframe>
-                                <p>/p>
+                                <img><iframe src="img/STG_Project ALVTUP.pdf" width="100%" height="1200"></iframe>
+                                <p>动画部分</p>
+                                <img><iframe src="img/Project A.L.I.C.E项目企划web3.pdf" width="100%" height="1200"></iframe>
+                                <p></p>
                             </div>
                         </div>
                     </div>                                                   
