--- a/project/index - Copy (2) - Copy (4).html
+++ b/project/index - Copy (2) - Copy (4).html
@@ -66,15 +66,14 @@
                     </div>
                 </div>
                 <div class="container">
-                    <div class="row align-items-center">                       
-                        <div class="jumbotron">
-                            <h1>Project LA企划</h1>
-                            <p class="lead">Project A.L.I.C.E </p>
-                            <img src='/project/img/ProjectLA1.jpg' width="640" height="430" alt='image'>
-                            <img src='/project/img/ProjectLA2.JPG' width="640" height="430" alt='image'>
-                            <img src='/project/img/ProjectLA3.JPG' width="640" height="430" alt='image'>
+                        <div class="row align-items-center">
+                            <div class="jumbotron">
+                                <h1></h1>
+                                <p class="lead"> Welcome sknrio Tech Team Project Web</p>
+                                <p class="lead">Project A.L.I.C.E </p>
+                                <p><a href="/project/project_Alice.aspx" class="btn btn-primary btn-lg">了解详情 &raquo;</a></p>
+                            </div>
                         </div>
-                    </div>
                     </div>                                                   
                     <div class="container body-content">                       
                         <ContentPlaceHolder ID="MainContent" runat="server">
