--- a/project/video.html
+++ b/project/video.html
@@ -66,15 +66,13 @@
                     </div>
                 </div>
                 <div class="container">
-                    <div class="row align-items-center">                       
-                        <div class="jumbotron">
-                            <h1>Project LA企划</h1>
-                            <p class="lead">Project A.L.I.C.E </p>
-                            <img src='/project/img/ProjectLA1.jpg' width="640" height="430" alt='image'>
-                            <img src='/project/img/ProjectLA2.JPG' width="640" height="430" alt='image'>
-                            <img src='/project/img/ProjectLA3.JPG' width="640" height="430" alt='image'>
+                        <div class="row align-items-center">
+                            <div class="jumbotron">
+                                <h2>关于STT&GCBT视频制作标准</h2>
+                                <img><iframe src="/project/img/关于STT&GCBT视频制作标准.pdf" width="100%" height="1200"></iframe>
+                                <a class="btn btn-default" href="/project/img/关于STT&GCBT视频制作标准.pdf " download="关于STT&GCBT视频制作标准.pdf">下载文档 &raquo;</a>
+                            </div>
                         </div>
-                    </div>
                     </div>                                                   
                     <div class="container body-content">                       
                         <ContentPlaceHolder ID="MainContent" runat="server">
